--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-responsive-carousel": "^3.2.21",
     "react-scripts": "4.0.3",
     "sass": "^1.42.1",
     "web-vitals": "^1.0.1"
